--- a/.npmignore
+++ b/.npmignore
@@ -1,32 +1,11 @@
-## copy from .gitignore
-.DS_Store
+# .gitignore
 .idea
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-node_modules/
-.npm
-.eslintcache
-/coverage/
-/.nyc_output/
-/tmp/
+node_modules
 
 # .npmignore
-.babelrc
-.editorconfig
-.eslintignore
-.eslintrc.js
 .gitignore
-.nvmrc
-.nycrc
-.prettierignore
-.prettierrc
-.travis.yml
-AUTHORS.md
-CONTRIBUTING.md
-tsconfig.json
-tslint.json
-/docs
-/example
-/src
-/test
+.npmignore
+.eslint*
+.babelrc
+tests
+docs
