--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "router-path",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "description": "Utility to create router paths from a template and replaces the params.",
-  "main": "index.js",
+  "main": "./lib/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "npm run build:commonjs",
+    "build:commonjs": "babel src --out-dir lib",
+    "prepublish": "npm run build"
   },
   "keywords": [
     "router",
@@ -13,7 +16,14 @@
   ],
   "author": "Thijs Broerse",
   "license": "ISC",
-  "dependencies": {
-    "user": "0.0.0"
+  "devDependencies": {
+    "babel-cli": "^6.24.1",
+    "babel-core": "^6.24.1",
+    "babel-eslint": "^7.2.3",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-export-extensions": "^6.22.0",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
+    "babel-plugin-transform-strict-mode": "^6.24.1",
+    "babel-preset-es2015": "^6.24.1"
   }
 }
