--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Utility to create router paths from a template and replaces the params.",
   "main": "./lib/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "build": "npm run build:commonjs",
     "build:commonjs": "babel src --out-dir lib",
     "prepublish": "npm run build"
@@ -20,10 +20,13 @@
     "babel-cli": "^6.24.1",
     "babel-core": "^6.24.1",
     "babel-eslint": "^7.2.3",
+    "babel-jest": "^20.0.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-export-extensions": "^6.22.0",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-plugin-transform-strict-mode": "^6.24.1",
-    "babel-preset-es2015": "^6.24.1"
+    "babel-preset-es2015": "^6.24.1",
+    "assets-webpack-plugin": "^3.5.1",
+    "jest": "^20.0.0"
   }
 }
