--- a/.babelrc
+++ b/.babelrc
@@ -1,11 +1,21 @@
 {
 	"presets": [
-		"es2015"
+		["@babel/env", {
+			"targets": {
+				"browsers": ["last 2 versions"],
+				"node": "8"
+			},
+			"loose": true,
+			"useBuiltIns": false
+		}],
+		"@babel/typescript"
 	],
 	"plugins": [
-		"transform-class-properties",
-		"transform-object-rest-spread",
-		"transform-export-extensions",
-		"transform-strict-mode"
-	]
+		["@babel/plugin-transform-runtime", {
+			"helpers": true,
+			"regenerator": false
+		}],
+		"@babel/proposal-class-properties",
+		"@babel/proposal-object-rest-spread"
+	],
 }
