--- a/package.json
+++ b/package.json
@@ -3,30 +3,42 @@
   "version": "1.0.5",
   "description": "Utility to create router paths from a template and replaces the params.",
   "main": "./lib/index.js",
+  "types": "./lib/index.d.ts",
   "scripts": {
     "test": "jest",
-    "build": "npm run build:commonjs",
-    "build:commonjs": "babel src --out-dir lib",
+    "build": "tsc",
     "prepublish": "npm run build"
   },
+  "author": "Thijs Broerse",
+  "homepage": "https://github.com/ThijsTyZ",
+  "license": "ISC",
   "keywords": [
     "router",
     "params",
     "react"
   ],
-  "author": "Thijs Broerse",
-  "license": "ISC",
   "devDependencies": {
-    "babel-cli": "^6.24.1",
-    "babel-core": "^6.24.1",
-    "babel-eslint": "^7.2.3",
-    "babel-jest": "^20.0.0",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-export-extensions": "^6.22.0",
-    "babel-plugin-transform-object-rest-spread": "^6.23.0",
-    "babel-plugin-transform-strict-mode": "^6.24.1",
-    "babel-preset-es2015": "^6.24.1",
-    "assets-webpack-plugin": "^3.5.1",
-    "jest": "^20.0.0"
+    "@babel/cli": "^7.5.0",
+    "@babel/core": "^7.5.0",
+    "@babel/plugin-proposal-class-properties": "^7.5.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.5.2",
+    "@babel/plugin-transform-runtime": "^7.5.0",
+    "@babel/preset-env": "^7.5.2",
+    "@babel/preset-typescript": "^7.3.3",
+    "@babel/register": "^7.4.4",
+    "babel-eslint": "^8.0.3",
+    "babel-plugin-istanbul": "^4.1.5",
+    "cross-env": "^5.1.1",
+    "jest": "^24.8.0",
+    "jsdom": "^11.5.1",
+    "jsdom-global": "^3.0.2",
+    "ts-jest": "^24.0.2",
+    "tslint": "^5.8.0",
+    "tslint-config-airbnb": "^5.11.1",
+    "tslint-config-prettier": "^1.18.0",
+    "typescript": "^3.5.3"
+  },
+  "dependencies": {
+    "@babel/runtime": "^7.5.2"
   }
 }
