--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
   "name": "router-path",
-  "version": "1.1.0",
+  "version": "2.0.0",
   "description": "Utility to create router paths from a template and replaces the params.",
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
   "scripts": {
     "test": "jest",
-    "build": "tsc",
-    "prepublish": "npm run build"
+    "build": "tsc"
   },
   "author": "Thijs Broerse",
   "homepage": "https://github.com/ThijsTyZ",
