--- a/package.json
+++ b/package.json
@@ -19,25 +19,16 @@
   "devDependencies": {
     "@babel/cli": "^7.5.0",
     "@babel/core": "^7.5.0",
-    "@babel/plugin-proposal-class-properties": "^7.5.0",
-    "@babel/plugin-proposal-object-rest-spread": "^7.5.2",
-    "@babel/plugin-transform-runtime": "^7.5.0",
     "@babel/preset-env": "^7.5.2",
     "@babel/preset-typescript": "^7.3.3",
     "@babel/register": "^7.4.4",
-    "babel-eslint": "^8.0.3",
-    "babel-plugin-istanbul": "^4.1.5",
+    "@types/jest": "^25.2.3",
+    "@types/node": "^14.0.5",
     "cross-env": "^5.1.1",
     "jest": "^24.8.0",
     "jsdom": "^11.5.1",
     "jsdom-global": "^3.0.2",
     "ts-jest": "^24.0.2",
-    "tslint": "^5.8.0",
-    "tslint-config-airbnb": "^5.11.1",
-    "tslint-config-prettier": "^1.18.0",
     "typescript": "^3.5.3"
-  },
-  "dependencies": {
-    "@babel/runtime": "^7.5.2"
   }
 }
